# portifolio-optimization

./: README.md  pyproject.toml  quantum_portfolio.py  requirements.txt
.github/workflows/: azure-quantum.yml  ci.yml  ibm-quantum.yml
src/quantum_portfolio/: main.py
tests/: test_main.py
